<resources>
    <string name="app_name">FireTime</string>
    <string name="init_time" translatable="false">0:00:00:000</string>
    <string name="init_time_sec" translatable="false">0:00:00</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_support">Support</string>
    <string name="title_stopWatch">FireTime - StopWatch</string>
    <string name="choose_language">Select:</string>
    <string name="switch_background_act">Stop timer when application on the background</string>
    <string name="lang_ru">Russian</string>
    <string name="button_start">Start</string>
    <string name="button_settings">Settings</string>
    <string name="button_reset">Reset</string>
    <string name="button_pause">Pause</string>
    <string name="lang_en">English</string>
    <string name="switch_paused_act">Stop timer when application paused</string>
    <string name="swith_milliseconds_act">Do not show milliseconds</string>
    <string name="number_millisec_delta">Millisecond increment: </string>
    <string name="number_millisecond_hint" translatable="false">125</string>
    <string name="button_apply_settings">Apply Settings</string>

    <string name="support_email_subject_hint">Email Subject</string>
    <string name="support_msg_hint">Message</string>
    <string name="support_button_send">Send</string>

    <string name="settings_share">Share</string>
    <string name="settings_vote">Rate</string>
    <string name="settings_about_program">About program</string>
    <string name="settings_support">Write to tech support</string>

    <string name="settings_choser_title">Send message via ...</string>
    <string name="share_recommend">I recommend the Fire Time application for Android</string>
    <string name="vote_in_developing">In developing</string>

    <string name="volume_off">Mute</string>
    <string name="volume_on">Unmute</string>

    <string name="about_autor">Developed by:\nKosenkov Ivan</string>
    <string name="special_thanks">Special thanks</string>
    <string name="feedback">Feedback</string>
    <string name="donate">Donate</string>
    <string name="copyright" translatable="false">Copyright © 2019 Bouncer77</string>

    <string name="thanks_support">Thanks for the support</string>

    <string name="tag_illuminati">Illuminati</string>
    <string name="tag_spiritual_mentor">Spiritual mentor</string>
    <string name="tag_investor">Investor</string>
    <string name="tag_supreme_master">Supreme master</string>
    <string name="tag_wise_consul">Wise consul</string>
    <string name="tag_famous_hero">Famous hero</string>
    <string name="lock">lock</string>
    <string name="unlock">unlock</string>


    <string name="illuminati" translatable="false">Marina Fox</string>
    <string name="spiritual_mentor" translatable="false">Natalia Journal</string>
    <string name="investor" translatable="false">Igor Moscow77777</string>
    <string name="supreme_master" translatable="false"> </string>
    <string name="wise_consul" translatable="false"> </string>
    <string name="famous_hero" translatable="false"> </string>

    <string name="remove_lock">Remove the lock</string>
    <string name="feedback_url" translatable="false">https://feedback.userreport.com/2ddf9e80-cddd-40a2-aa5d-a61d00b03d22/</string>


    <string-array name="spiner_select_language">
        <item>@string/lang_en</item>
        <item>@string/lang_ru</item>
    </string-array>

    <string name="title_top" translatable="false">Top fragment</string>
    <string-array name="pizzas">
        <item>Diavolo</item>
        <item>Funghi</item>
    </string-array>

    <string-array name="pasta">
        <item>Spaghetti Bolognese</item>
        <item>Lasagne</item>
    </string-array>

    <string-array name="stores">
        <item>Cambridge</item>
        <item>Sebastopol</item>
    </string-array>


</resources>
