<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorOrange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="@color/colorDark">

        <include
            layout="@layout/toolbar_main"
            android:id="@+id/toolbar"/>

        <Switch
            android:id="@+id/switchBackground"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_background_act" />

        <Switch
            android:id="@+id/switchPause"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_paused_act" />

        <Switch
            android:id="@+id/switchMilliseconds"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swith_milliseconds_act" />



        <Button
            android:id="@+id/button"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@color/colorGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickApplySettings"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/button_apply_settings" />

        <Button
            android:id="@+id/buttonFeedback"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@color/colorRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSendFeedback"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/feedback" />

        <Button
            android:id="@+id/imageButtonShare"
            android:text="@string/settings_share"
            android:drawableStart="@drawable/baseline_share_24"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:background="@color/colorOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/settings_share"
            android:onClick="onClickShare"/>



        <Button
            android:id="@+id/imageButtonSupport"
            android:text="@string/settings_support"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:background="@color/colorOrange"
            android:drawableStart="@drawable/baseline_announcement_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/settings_support"
            android:onClick="onClickSupport"/>

        <Button
            android:id="@+id/imageButtonVote"
            android:text="@string/settings_vote"
            android:drawableStart="@drawable/baseline_favorite_24"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:background="@color/colorOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/settings_vote"
            android:onClick="onClickVote"/>

        <Button
            android:id="@+id/buttonAutor"
            android:text="@string/settings_about_program"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:background="@color/colorOrange"
            android:drawableStart="@drawable/baseline_copyright_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/settings_about_program"
            android:onClick="onClickAutor"/>
    </LinearLayout>

</ScrollView>