<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrange"
    android:orientation="vertical"
    tools:context=".SupportActivity">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar"/>


    <EditText
        android:id="@+id/editTextEmailSubject"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:hint="@string/support_email_subject_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailSubject"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextMSG"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:hint="@string/support_msg_hint"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:gravity="top"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect|textAutoComplete"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonSupportSend"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:textColor="@color/colorGreen"
        android:onClick="onClickSendMsgToSupport"
        android:layout_gravity="end"
        android:text="@string/support_button_send" />
</LinearLayout>